# CodeFitter

./: CLAUDE.md  README.md  main.py  pyproject.toml  setup.py
fitter/: config.yaml  fitter.py  main.py
fitter/lore/: write.yaml
fitter/provider/: base.py  bigmodel.py  modules_factory.py  openai_like.py
fitter/provider/llm/: openai_like.py
lore/: write.yaml
test/: simple.py
